Refactor using JDK 11 features